// Jest Snapshot v1, https://goo.gl/fbAQLP

exports[`<Alert /> renders an error alert with exclamation icon and title 1`] = `
<DocumentFragment>
  <div
    class="af-alert af-alert--error"
    role="alert"
  >
    <div
      class="af-alert__title"
    >
      <div
        class="af-alert__title-icon"
      >
        <i
          class="glyphicon glyphicon-exclamation-sign"
        />
      </div>
      <div
        class="af-alert__title-text"
      >
        Les caves et les garages situés dans le même corps de bâtiment que le logement assuré sont garantis d'office
      </div>
    </div>
  </div>
</DocumentFragment>
`;

exports[`<Alert /> renders an info alert with info-sign icon, a title and a body containing an unordered list 1`] = `
<DocumentFragment>
  <div
    class="af-alert af-alert--error"
    role="alert"
  >
    <div
      class="af-alert__title"
    >
      <div
        class="af-alert__title-icon"
      >
        <i
          class="glyphicon glyphicon-exclamation-sign"
        />
      </div>
      <div
        class="af-alert__title-text"
      >
        Les caves et les garages situés dans le même corps de bâtiment que le logement assuré sont garantis d'office
      </div>
    </div>
    <div
      class="af-alert__content"
    >
      <div
        class="af-alert__content__left"
      />
      <div
        class="af-alert__content__right"
      >
        <ul>
          <li>
            Test1
          </li>
          <li>
            Test2
          </li>
        </ul>
      </div>
    </div>
  </div>
</DocumentFragment>
`;
